[gd_scene load_steps=11 format=3 uid="uid://bbimief5lvaa0"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_8vtf1"]
[ext_resource type="FontFile" uid="uid://dwprribxrnn8f" path="res://assets/fonts/PlaywriteAUSA-VariableFont_wght.ttf" id="2_ox664"]
[ext_resource type="Texture2D" uid="uid://d2rjotpr7fut1" path="res://assets/room1/room2.png" id="2_rfb40"]
[ext_resource type="AudioStream" uid="uid://dpswla2drqd8j" path="res://assets/sounds/buttons/ESM_Perfect_App_Button_5_Organic_Simple_Classic_Game_Click.wav" id="4_p30hg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y64d8"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pk0ty"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_xinu1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/LeftContainer/MarginContainer/CreditsPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/LeftContainer/MarginContainer/CreditsPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xaa1h"]
resource_name = "hide_credits"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/LeftContainer/MarginContainer/CreditsPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/LeftContainer/MarginContainer/CreditsPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_awe2x"]
resource_name = "show_credits"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/LeftContainer/MarginContainer/CreditsPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/LeftContainer/MarginContainer/CreditsPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u7gxb"]
_data = {
"RESET": SubResource("Animation_xinu1"),
"hide_credits": SubResource("Animation_xaa1h"),
"show_credits": SubResource("Animation_awe2x")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8vtf1")

[node name="BackgroundTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rfb40")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LeftContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/LeftContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="CreditsPanel" type="Panel" parent="MarginContainer/HBoxContainer/LeftContainer/MarginContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_y64d8")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LeftContainer/MarginContainer/CreditsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/LeftContainer/MarginContainer/CreditsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_ox664")
bbcode_enabled = true
text = "[center]
Team:
Tech Tails

Code:
Jakub Hubacek
Jan Mesarc

Art:
Meru

Composer:
Meru

Game Design:
Meru, Jan Mesarc, Jakub Hubacek
[/center]"
fit_content = true

[node name="RightContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/RightContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="GameTitle" type="Label" parent="MarginContainer/HBoxContainer/RightContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Brain and Gut"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/RightContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/RightContainer/ButtonsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_pk0ty")
text = "Start Game"

[node name="CreditsButton" type="Button" parent="MarginContainer/HBoxContainer/RightContainer/ButtonsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_pk0ty")
text = "Credits"

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/RightContainer/ButtonsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_pk0ty")
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/RightContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="VersionLabel" type="Label" parent="MarginContainer/HBoxContainer/RightContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "v0.0.1"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u7gxb")
}

[node name="UIAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_p30hg")
bus = &"UI"

[connection signal="pressed" from="MarginContainer/HBoxContainer/RightContainer/ButtonsContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RightContainer/ButtonsContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RightContainer/ButtonsContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
